<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenuContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="4dp"
    tools:context=".Home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MapSpace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/WarningMain"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/warningmain"
            android:onClick="Clicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/warning" />

        <ImageView
            android:id="@+id/ReportMain"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="210dp"
            android:contentDescription="@string/reportmain"
            android:onClick="Clicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/report"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/CurrentLocate"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="210dp"
            android:contentDescription="@string/locate"
            android:onClick="Clicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/locate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/Shadow2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@id/BottomBar"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toTopOf="@+id/StatusMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/StatusMain"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_marginBottom="70dp"

        android:background="#F3F3F3"
        android:onClick="Clicked"
        app:layout_constraintBottom_toBottomOf="@+id/MapSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <ImageView
            android:id="@+id/mainstatuscolor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/MainLocationStats"
            app:layout_constraintStart_toEndOf="@+id/MainStatusLocation"
            app:srcCompat="@drawable/ic_statusmain" />

        <TextView
            android:id="@+id/MainStatusLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="LOCATION"
            android:textColor="@color/Grey1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/MainLocationStats"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/MainStatusWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/MainStatusWeatherIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/MainStatusWeatherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="######"
                    android:textColor="@color/Grey1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/MainStatusWeatherIcon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/MainStatusTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/MainStatusTempReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="##°C"
                    android:textColor="@color/Grey1"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/MainStatusWaterlvl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/MainStatusWLIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/waterlvl" />

                <TextView
                    android:id="@+id/MainStatusWLReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="##.## m"
                    android:textColor="@color/Grey1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/MainStatusWLIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/MainStatusRainFall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/MainStatusRFIcon"
                    android:layout_width="43dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/rain" />

                <TextView
                    android:id="@+id/MainStatusRFReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="##.## mm"
                    android:textColor="@color/Grey1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/MainStatusRFIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/Shadow1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@id/BottomBar"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="@+id/StatusMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/LogoWord"
            android:layout_width="243dp"
            android:layout_height="56dp"
            android:contentDescription="@string/LogoD1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoword" />

        <ImageView
            android:id="@+id/FavouritesMain"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/FavouriteMain"
            android:onClick="Clicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LogoWord"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/favourite"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/Menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/MenuMain"
            android:onClick="Clicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LogoWord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>